--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yeonflix",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://thisisyjin.github.io/yeonFlix",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
